# GP

./: ReadMe.md
search_engine/: CMakeLists.txt
search_engine/include/: InvertedIndex.h  convertJSON.h  inverted_index.h  search_engine.h
search_engine/json/: answers.json  config.json  requests.json
search_engine/src/: CMakeLists.txt  InvertedIndex.cpp  convertJSON.cpp  inverted_index.cpp  search_engine.cpp
search_engine/tests/: CMakeLists.txt  tests.cpp
